[tool.poetry]
name = "neo4j-text2cypher"
version = "0.1.0"
description = "A simplified Text2Cypher agent for Neo4j using LangGraph"
authors = ["Your Name <your.email@example.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
langchain = "^0.3.26"
langchain-core = "^0.3.25"
langchain-openai = "^0.3.28"
langgraph = "^0.3.0"
pandas = "^2.2.2"
pydantic = "^2.9.2"
python = "^3.10"
pyyaml = "^6.0.1"
typing-extensions = "^4.0.0"
neo4j-graphrag = "^1.6.0"
neo4j = "^5.28.0"
langchain-neo4j = "^0.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.3"
mypy = "^1.10.0"
pre-commit = { version = "^3.6.2", python = "^3.10" }
pytest = "^8.3.2"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.1"
ruff = "^0.3.0"
types-PyYAML = "^6.0.12.20240724"
ipykernel = "^6.29.5"
nest-asyncio = "^1.6.0"
pytest-asyncio = "^0.25.3"

[tool.poetry.group.ui.dependencies]
streamlit = "^1.37.1"
neo4j-viz = "^0.4.0"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_calls = false
exclude = ["docs/", "scripts/"]
explicit_package_bases = true

[tool.ruff]
target-version = "py310"
show-fixes = true

[tool.coverage.paths]
source = ["neo4j_text2cypher"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"